Fixed blog form overflow bug

--- a/public/stylesheets/pages/_blog-form.scss
+++ b/public/stylesheets/pages/_blog-form.scss
@@ -32,14 +32,15 @@
     }
 
     &__body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         height: 100%;
         width: 100%;
         padding: 1rem;
         border: 2px solid white;
-        overflow: auto;
+    }
+
+    &__right > &__body {
+        overflow-y: auto;
+        overflow-wrap: break-word;
     }
 }
 
@@ -80,7 +81,6 @@
 .blog-preview {
     display: flex;
     flex-direction: column;
-    hyphens: auto;
     gap: 1rem;
     width: 100%;
     height: 100%;
